<resources>
    <string name="app_name">DroiUser Login</string>
    <string name="name">Name:</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="account_name">Name:</string>
    <string name="login_text">Hi %1$s !\nYou have login~\n\nLogout function is in side menu. </string>
    <string name="user_id">User id</string>
    <string name="password">Password</string>
    <string name="password_text">Password:</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="empty_id_password">User id / password are empty.</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="hint_confirm">Confirm password</string>
    <string name="password_not_same">Password and confirm password are not the same.</string>
    <string name="nickname_title">Nickname:</string>
    <string name="hint_nickname">Nickname</string>
    <string name="user_exists">User name %1$s has already exists.</string>
    <string name="user_already_login">User %1$s had logged in. Please logout first.</string>
    <string name="signup_fail">Sign up fail. Error message: [%1$s]</string>
    <string name="signup_ok">Sign up successfuly.</string>
    <string name="logout">Logout</string>
    <string name="user_logout">User had logged out.</string>
    <string name="login_user">Login successfully.</string>
    <string name="user_not_exists">User id %1$s is not exists.</string>
    <string name="user_wrong_password">Wrong password.</string>
    <string name="login_fail">Login fail. Error message: [%1$s]</string>
</resources>
